--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7293,9 +7293,9 @@ blockquote .fullscreen-button, blockquote .run-btn{
   transform: translateX(-100%);
   transition: transform 0.3s ease;
   z-index: 1000;
-  color:var(--light-low);
-  font-family: grotesk;
+  color:white;
   z-index:1100;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .sidebar.open {
@@ -7337,6 +7337,7 @@ blockquote .fullscreen-button, blockquote .run-btn{
     width:calc(100% + 40px);
     text-align: left;
     background:var(--wne-yellow);
+    font-family: grotesk;
     color:var(--wne-blue);
     user-select: none;
   }
